# CER

model-lib-tmpl-main/: .gitignore  Makefile  README.md  pyproject.toml  setup.py
model-lib-tmpl-main/.devcontainer/: Dockerfile  compose.yml  devcontainer.json  starship.toml
model-lib-tmpl-main/model_xpto/: main.py
model-lib-tmpl-main/tests/: test_main_predict.py
tests/: test_main_predict.py
workspace/airflow/: airflow.cfg  airflow.db  standalone_admin_password.txt
workspace/airflow/dags/: welcome_dag.py
